        - no longer use AUTOLOAD for the initial loading (for no very good reason).
        - tcp_server now tries to unlink unix domain sockets when it gets destroyed.
        - do not run event loop detection multiple times when programs call their cached
          copies of AnyEvent::detect.
        - parse_hostport now accepts absolute paths als unix domain sockets.
        - add Task::Weaken as dependency (as recommends only at this time).
        - replace PF_UNSPEC by 0, for good old minix.

6.0 (not officially released, but was on CPAN for about 15 minutes :/)

5.34  Thu May 12 09:59:41 CEST 2011
	- AE::TLS didn't support both cert_file and key at the same time,
          due to some copy&paste bug (reported and analyzed by vti).
	- improve AE::Handle timeout documentation slightly.

5.33  Mon Feb  7 21:51:41 CET 2011
	- never appeared on CPAN, for unknown reasons.
	- AnyEvent::Handle on_connect_error - do not try to destroy a handle
          object when it's already gone (analyzed by Ryan Bullock).
	- update idna algorithm(s) to UTS#46 version 6.0.0.
        - preserve trailing dot in idn_to_ascii - testsuite says to preserve,
          uts46 says it's an error, and testsuite makes more sense.
        - remove leading dots in idn_to_ascii - testsuite says to remove,
          uts46 says it's an error, and testsuite makes more sense.
        - fixed a bug in idn ignored character processing.
        - passes the uts46 6.0.0 testsuite except for three cases which
          apparently are bugs in the testsuite itself.
        - passes the uts46 6.0.1 testsuite except for eleven cases which
          apparently are bugs in the testsuite itself.

5.31  Sun Jan 23 11:49:19 CET 2011
	- work around a POE bug where POE would first poll for new events and
          invoke handlers BEFORE handling the message queue.
	- fix parsing of "domain" statement in resolv.conf (Johannes Plunien).
	- stop_read now does just that in TLS mode. see its